--- a/ui/src/components/layout/RootLayout.module.css
+++ b/ui/src/components/layout/RootLayout.module.css
@@ -27,8 +27,9 @@
 
 .content {
     background: #fff;
-    height: calc(100vh - 60px);
-   
+    height: calc(100vh - 180px); /* Account for header, tabs, and padding */
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 0;
 }
 
@@ -66,11 +67,21 @@
     border-left: 1px solid #eaeaea;
     padding: 24px;
     background: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.chatContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
     position: sticky;
-    height: 64px;
+    padding-left: 24px;
+    height: 68px;
     top: 0;
      background: #fff;
     z-index: 10;
